src/main/java/com/schotanus/turtle/parser/TurtleParser.java
/* TurtleParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. TurtleParser.java */
package com.schotanus.turtle.parser;

/**
 * Parser for the Turtle language.
 * <br>The Turtle language borrows heavily from the Logo language but some
 * important changes have been made that are documented separately.
 * @author Kees Schotanus
 * @version 1.0
 */
public class TurtleParser/*@bgen(jjtree)*/implements TurtleParserTreeConstants, TurtleParserConstants {/*@bgen(jjtree)*/
  protected static JJTTurtleParserState jjtree = new JJTTurtleParserState();
    /**
     * Driver method that reads from standard in and dumps the input in the form of
     * a tree to standard out.
     * @param args Not used.
     */
    public static void main(String args[]) throws ParseException {
        TurtleParser parser = new TurtleParser(System.in);
        try {
            SimpleNode node = parser.parseUnit();
            System.out.println("Input:" + node);
            node.dump(">");
            parser.jjtree.rootNode().interpret();
        } catch (Exception exception) {
            exception.printStackTrace();
        }
    }

/**
 * Complete unit that can be parsed. As you can see a unit consists of function
 * declarations and statements followed by EOF.
 */
  static final public SimpleNode parseUnit() throws ParseException {/*@bgen(jjtree) ParseUnit */
  NodeParseUnit jjtn000 = new NodeParseUnit(null, JJTPARSEUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BACK:
        case BACKGROUND:
        case CLEAR:
        case FORWARD:
        case HEAD:
        case HIDE:
        case HOME:
        case IF:
        case LEFT:
        case PEN:
        case PRINT:
        case REPEAT:
        case RIGHT:
        case SHOW:
        case TO:
        case TURTLE:
        case WHILE:
        case LBRACKET:
        case NAME:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TO:{
          FunctionDeclaration();
          break;
          }
        case BACK:
        case BACKGROUND:
        case CLEAR:
        case FORWARD:
        case HEAD:
        case HIDE:
        case HOME:
        case IF:
        case LEFT:
        case PEN:
        case PRINT:
        case REPEAT:
        case RIGHT:
        case SHOW:
        case TURTLE:
        case WHILE:
        case LBRACKET:
        case NAME:{
          Statement();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

/**
 * Declaration of a Turtle function like:
 * TO SQUARE :SIZE [REPEAT 4 [FORWARD :SIZE RIGHT 90]]
 * Logo uses an END statement to specify the end of the function declaration and
 * has no special token to state the beginning of the function. Turtle enforces
 * the use of a statement block to define the function.
 */
  static final public void FunctionDeclaration() throws ParseException {/*@bgen(jjtree) FunctionDeclaration */
 NodeFunctionDeclaration jjtn000 = new NodeFunctionDeclaration(null, JJTFUNCTIONDECLARATION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token name;
    try {
      jj_consume_token(TO);
      name = jj_consume_token(NAME);
NodeFormalArguments jjtn001 = new NodeFormalArguments(null, JJTFORMALARGUMENTS);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
      try {
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VARIABLE:{
            ;
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            break label_2;
          }
          Variable();
        }
      } catch (Throwable jjte001) {
if (jjtc001) {
                           jjtree.clearNodeScope(jjtn001);
                           jjtc001 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte001 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte001;}
                         }
                         if (jjte001 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte001;}
                         }
                         {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001, true);
                         }
      }
      StatementBlock();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setName(name.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/**
 * Turtle defines a statement block as one or more statements within square
 * brackets. This replaces Logos BEGIN and END keywords.
 */
  static final public void StatementBlock() throws ParseException {/*@bgen(jjtree) StatementBlock */
  NodeStatementBlock jjtn000 = new NodeStatementBlock(null, JJTSTATEMENTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACKET);
      label_3:
      while (true) {
        Statement();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BACK:
        case BACKGROUND:
        case CLEAR:
        case FORWARD:
        case HEAD:
        case HIDE:
        case HOME:
        case IF:
        case LEFT:
        case PEN:
        case PRINT:
        case REPEAT:
        case RIGHT:
        case SHOW:
        case TURTLE:
        case WHILE:
        case LBRACKET:
        case NAME:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(RBRACKET);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
  NodeStatement jjtn000 = new NodeStatement(null, JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BACKGROUND:{
        BackgroundColorStatement();
        break;
        }
      case BACK:
      case FORWARD:{
        BackOrForwardStatement();
        break;
        }
      case CLEAR:{
        ClearStatement();
        break;
        }
      case NAME:{
        FunctionCall();
        break;
        }
      case HEAD:{
        HeadStatement();
        break;
        }
      case HOME:{
        HomeStatement();
        break;
        }
      case IF:{
        IfStatement();
        break;
        }
      case LEFT:
      case RIGHT:{
        LeftOrRightStatement();
        break;
        }
      case PEN:{
        PenStatement();
        break;
        }
      case PRINT:{
        PrintStatement();
        break;
        }
      case REPEAT:{
        RepeatStatement();
        break;
        }
      case HIDE:
      case SHOW:{
        ShowOrHideTurtleStatement();
        break;
        }
      case LBRACKET:{
        StatementBlock();
        break;
        }
      case TURTLE:{
        UseTurtleStatement();
        break;
        }
      case WHILE:{
        WhileStatement();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/**
 * Changes the background color.
 * Logo doesn't need COMMAs between the red, green and blue parameter but
 * Turtle does since it allows for easier parsing. Not using commas forces you
 * to determine where a parameter expression starts and ends.
 */
  static final public void BackgroundColorStatement() throws ParseException {/*@bgen(jjtree) BackgroundColorStatement */
  NodeBackgroundColorStatement jjtn000 = new NodeBackgroundColorStatement(null, JJTBACKGROUNDCOLORSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BACKGROUND);
      jj_consume_token(COLOR);
      Expression();
      jj_consume_token(COMMA);
      Expression();
      jj_consume_token(COMMA);
      Expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void BackOrForwardStatement() throws ParseException {/*@bgen(jjtree) BackOrForwardStatement */
  NodeBackOrForwardStatement jjtn000 = new NodeBackOrForwardStatement(null, JJTBACKORFORWARDSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BACK:{
        jj_consume_token(BACK);
        Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setForward(false);
        break;
        }
      case FORWARD:{
        jj_consume_token(FORWARD);
        Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setForward(true);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void ClearStatement() throws ParseException {/*@bgen(jjtree) ClearStatement */
  NodeClearStatement jjtn000 = new NodeClearStatement(null, JJTCLEARSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLEAR);
      jj_consume_token(SCREEN);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/**
 * Call to a Turtle function. Turtle forces you to separate parameters with
 * COMMAs but Logo doesn't.
 */
  static final public void FunctionCall() throws ParseException {/*@bgen(jjtree) FunctionCall */
 NodeFunctionCall jjtn000 = new NodeFunctionCall(null, JJTFUNCTIONCALL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token token;
    try {
      token = jj_consume_token(NAME);
NodeActualArguments jjtn001 = new NodeActualArguments(null, JJTACTUALARGUMENTS);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COSINE:
        case REPCOUNT:
        case SINE:
        case LPARENS:
        case MINUS:
        case CONSTANT:
        case VARIABLE:{
          Expression();
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMA:{
              ;
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              break label_4;
            }
            jj_consume_token(COMMA);
            Expression();
          }
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          ;
        }
      } catch (Throwable jjte001) {
if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001, true);
                   }
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setName(token.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void HeadStatement() throws ParseException {/*@bgen(jjtree) HeadStatement */
  NodeHeadStatement jjtn000 = new NodeHeadStatement(null, JJTHEADSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HEAD);
      Expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void HomeStatement() throws ParseException {/*@bgen(jjtree) HomeStatement */
  NodeHomeStatement jjtn000 = new NodeHomeStatement(null, JJTHOMESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HOME);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/**
 * Different Logo versions use different IF statements. Turtles IF statement
 * re-uses the definition of a statement block.
 */
  static final public void IfStatement() throws ParseException {/*@bgen(jjtree) IfStatement */
  NodeIfStatement jjtn000 = new NodeIfStatement(null, JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      RelationalExpression();
      StatementBlock();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        StatementBlock();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void LeftOrRightStatement() throws ParseException {/*@bgen(jjtree) LeftOrRightStatement */
  NodeLeftOrRightStatement jjtn000 = new NodeLeftOrRightStatement(null, JJTLEFTORRIGHTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LEFT:{
        jj_consume_token(LEFT);
        Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setLeft(true);
        break;
        }
      case RIGHT:{
        jj_consume_token(RIGHT);
        Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setLeft(false);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}
